@@ -7,6 +7,7 @@ warning: array field Dia.DashStyle.dash probably incorrectly generated
 warning: array field Dia.ShapeImage.affine probably incorrectly generated
 
 This seems to be a problem with the generator.
+Array marshalling is not implemented in mono yet.
 
 The xml has a format of:
       	<field cname="dash" array_len="1" type="gdouble"/>
