@@ -1,4 +1,4 @@
-// Dia.CanvasItem.Custom - Dia CanvasItem class customizations
+// Canvas.Custom - customizations
 //
 // Author: Martin Willemoes Hansen <mwh@sysrq.dk>
 //
