@@ -1,0 +1,12 @@
+// CanvasLine.Custom - customizations
+//
+// Author: Martin Willemoes Hansen <mwh@sysrq.dk>
+//
+// Copyright (C) 2003 Martin Willemoes Hansen
+//
+// This code is inserted after the automatically generated code.
+
+public CanvasLine() {
+        Raw = CanvasItem.ItemCreate (CanvasLine.GType).Handle;
+}
+
