@@ -1,4 +1,4 @@
-// Dia.PlacementTool.Custom - Dia PlacementTool class customizations
+// PlacementTool.Custom - customizations
 //
 // Author: Martin Willemoes Hansen <mwh@sysrq.dk>
 //
