@@ -66,7 +66,7 @@
       </Docs>
     </Member>
     <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="protected CanvasImage ();" />
+      <MemberSignature Language="C#" Value="public CanvasImage ();" />
       <MemberType>Constructor</MemberType>
       <ReturnValue />
       <Parameters />
